add metadata section to unify the links of video and code

--- a/paper.tex
+++ b/paper.tex
@@ -22,7 +22,7 @@
 \input{middle_sections}
 \input{related_work}
 \input{conclusion}
-
+\input{metadata}
 \bibliographystyle{acm}
 \bibliography{ref}
 
